First step of introducing AuthP into CleanArchitecture based on Example1 -Seeding of data using AuthP's system -Permissions from AuthP -HasPermission in MediatR-pipeline -Tests not working yet -HasPermission applied to TodoLists

--- a/src/Web/appsettings.Development.json
+++ b/src/Web/appsettings.Development.json
@@ -6,5 +6,7 @@
       "Microsoft.AspNetCore.SpaProxy": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "EncryptionKey": "TbONtb,titq",
+  "DemoUsers": "Trainee@g1.com,Staff@g1.com,Manager@g1.com,Administrator@g1.com"
 }
