--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -9,5 +9,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SuperAdmin": //This holds the information on the superuser. This is useful when you first create the application's database
+  {
+    "Email": "Super@g1.com",
+    "Password": "Super@g1.com"
+  }
 }
