--- a/src/Web/appsettings.Development.json
+++ b/src/Web/appsettings.Development.json
@@ -8,5 +8,5 @@
     }
   },
   "EncryptionKey": "TbONtb,titq",
-  "DemoUsers": "Trainee@g1.com,Staff@g1.com,Manager@g1.com,Administrator@g1.com"
+  "DemoUsers": "AppAdmin@g1.com, admin@4uInc.com, AppSupport@g1.com, extraUser@g1.com, reader@4uInc.com, creator@4uInc.com, admin1@Pets.com, user1@Pets.com, user1@BigR.com"
 }
