--- a/src/Web/appsettings.Development.json
+++ b/src/Web/appsettings.Development.json
@@ -7,6 +7,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "EncryptionKey": "TbONtb,titq",
+  "EncryptionKey": "TbONtb,titq123abcd",
   "DemoUsers": "AppAdmin@g1.com, admin@4uInc.com, AppSupport@g1.com, extraUser@g1.com, reader@4uInc.com, creator@4uInc.com, admin1@Pets.com, user1@Pets.com, user1@BigR.com"
 }
