--- a/src/Web/appsettings.Development.json
+++ b/src/Web/appsettings.Development.json
@@ -8,5 +8,5 @@
     }
   },
   "EncryptionKey": "TbONtb,titq123abcd",
-  "DemoUsers": "AppAdmin@g1.com, admin@4uInc.com, AppSupport@g1.com, extraUser@g1.com, reader@4uInc.com, creator@4uInc.com, admin1@Pets.com, user1@Pets.com, user1@BigR.com"
+  "DemoUsers": "AppAdmin1@silabs.se, admin@Malmo1.se, director@Malmo1.se, utbildning@Malmo1.se, fritid@Malmo1.se, linne-rektor@Malmo1.se, linne-admin@Malmo1.se, berga-rektor@Malmo1.se, berga-admin@Malmo1.se, sten-rektor@Malmo1.se, sten-admin@Malmo1.se, admin@Lund1.se, director@Lund1.se, kattis-rektor@Lund1.se, kattis-admin@Lund1.se, sten-rektor@Lund1.se, sten-admin@Lund1.se"
 }
