--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchitectureDb2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=CleanArchitectureDb3;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -12,7 +12,7 @@
   "AllowedHosts": "*",
   "SuperAdmin": //This holds the information on the superuser. This is useful when you first create the application's database
   {
-    "Email": "Super@g1.com",
-    "Password": "Super@g1.com"
+    "Email": "Super1@silabs.se",
+    "Password": "Super1@silabs.se"
   }
 }
