--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -42,13 +42,13 @@
   <!--#if (!UseApiOnly)-->
   <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
+    <Compile Remove="Areas\**" />
     <Content Remove="$(SpaRoot)**" />
+    <Content Remove="Areas\**" />
+    <EmbeddedResource Remove="Areas\**" />
     <None Remove="$(SpaRoot)**" />
+    <None Remove="Areas\**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Areas\Demo\Data\" />
-    <Folder Include="Areas\Demo\Models\" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
